Bugfix crosshair visibility

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -15,7 +15,7 @@
 }
 
 .crosshair {
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
@@ -23,9 +23,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 1;
   user-select: none;
   pointer-events: none;
-}
-.crosshair:not(.visible) {
-  visibility: hidden;
 }
